--- a/PersonalTrainer/src/Framework/Framework.csproj
+++ b/PersonalTrainer/src/Framework/Framework.csproj
@@ -21,6 +21,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
