--- a/PersonalTrainer/src/MainProject/MainProject.csproj
+++ b/PersonalTrainer/src/MainProject/MainProject.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Modules\" />
+    <Compile Remove="Modules\**" />
   </ItemGroup>
 
   <ItemGroup>
