--- a/PersonalTrainer/src/MainProject/Modules/PersonalTrainerCore/PersonalTrainerCore.csproj
+++ b/PersonalTrainer/src/MainProject/Modules/PersonalTrainerCore/PersonalTrainerCore.csproj
@@ -23,4 +23,10 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Identity.Stores">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.identity.stores\2.0.0\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
