--- a/RestApi/PersonalTrainerApi/PersonalTrainerApi/Properties/launchSettings.json
+++ b/RestApi/PersonalTrainerApi/PersonalTrainerApi/Properties/launchSettings.json
@@ -3,27 +3,27 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5000/",
-      "sslPort": 44321
+      "applicationUrl": "https://localhost:44323/",
+      "sslPort": 44323
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:44321/",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MainProject": {
-      
+    "PersonalTrainerApi": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:7000/"
+      "applicationUrl": "http://localhost:13789/"
     }
   }
 }
