--- a/PersonalTrainer/src/MainProject/Modules/PersonalTrainerCore.WebGUI/PersonalTrainerCore.WebGUI.csproj
+++ b/PersonalTrainer/src/MainProject/Modules/PersonalTrainerCore.WebGUI/PersonalTrainerCore.WebGUI.csproj
@@ -16,10 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor" Version="2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
