--- a/RestApi/PersonalTrainerApi/PersonalTrainerApi/PersonalTrainerApi.csproj
+++ b/RestApi/PersonalTrainerApi/PersonalTrainerApi/PersonalTrainerApi.csproj
@@ -19,8 +19,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet"
-        Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
